--- a/L1/ProblemeImplementare/CMakeLists.txt
+++ b/L1/ProblemeImplementare/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_STANDARD 23)
 add_executable(cerc cerc.cpp)
 add_executable(suma suma.cpp)
 add_executable(cmmdc cmmdc.cpp)
+add_executable(cerc_error cercErrorInMLP.cpp)
